# pandect

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
pandect_event_example/: CMakeLists.txt  README.md  package.xml
pandect_event_example/include/pandect_event_example/: example_processor.hpp  pandect_event_example_node.hpp
pandect_event_example/launch/: pandect_event_example_node_launch.py
pandect_event_example/src/: pandect_event_example_node.cpp
pandect_event_hough/: CMakeLists.txt  README.md  package.xml
pandect_event_hough/include/pandect_event_hough/: hough_circle_estimator.hpp  hough_circle_processor.hpp  pandect_event_hough_node.hpp
pandect_event_hough/launch/: pandect_event_hough_node_launch.py
pandect_event_hough/src/: pandect_event_hough_node.cpp
pandect_gui/: CMakeLists.txt  README.md  package.xml
pandect_gui/include/pandect_gui/: pandect_gui.hpp  plot_processor.hpp  point_cloud_processor.hpp
pandect_gui/launch/: pandect_gui_launch.py
pandect_gui/src/: pandect_gui.cpp  pandect_pc_publisher.cpp
ros2bag_recording/simple_test/: metadata.yaml
