<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>pandect_event_hough</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="adam.l.kleppe@ntnu.no">Adam Leon Kleppe</maintainer>
  <author email="adam.l.kleppe@ntnu.no">Adam Leon Kleppe</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
